force-app/main/default/objects/Store__c/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_Call_Center</relationshipName>
    <type>Lookup</type>
</CustomField>