force-app/main/default/objects/Store__c/fields/E_Commerce__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E Commerce</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_ECommerce</relationshipName>
    <type>Lookup</type>
</CustomField>