force-app/main/default/objects/Store__c/fields/Full_System_Sales__c.field-meta.xml
<CustomField>
    <fullName>Full_System_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Full System Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>