force-app/main/default/objects/Store__c/fields/Product_Sales__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>