force-app/main/default/objects/Store__c/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_Retail</relationshipName>
    <type>Lookup</type>
</CustomField>