force-app/main/default/objects/Store__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <externalId>true</externalId>
    <label>Store Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>